# ticketmaster_api

./: Cargo.toml
src/: discovery.rs  error.rs  lib.rs
src/discovery/: discovery_client.rs  tm_classification.rs  tm_dates.rs  tm_event.rs  tm_links.rs  tm_place.rs  tm_queries.rs  tm_sales.rs  tm_structs.rs  tm_venue.rs
tests/: integration_tests.rs
