[package]
name = "ticketmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.8.1", features = ["serde"] }
getset = "0.1.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_default = "0.1.0"
serde_json = "1.0.95"
serde_qs = "0.12.0"
tokio = { version = "1.27.0", features = ["macros", "test-util"] }
tracing = "0.1.37"
